<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Deep breath</string>
    <string name="error_message">Loading was unsuccsessful</string>
    <string name="action_retry">retry</string>
    <string name="cancel_work">Cancel</string>
    <string name="action_about">About</string>
    <string name="action_find">Search</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_wind_label">Wind Units</string>
    <string name="pref_wind_label_metric">km/h</string>
    <string name="pref_wind_label_imperial">Imperial</string>
    <string name="pref_wind_label_rus">m/s</string>
    <string name="pref_wind_key" translatable="false">units_w</string>
    <string name="pref_wind_metric" translatable="false">metric_w</string>
    <string name="pref_wind_imperial" translatable="false">imperial_w</string>
    <string name="pref_wind_rus" translatable="false">rus_w</string>
    <string name="pref_press_label">Pressure Units</string>
    <string name="pref_press_label_metric">mb</string>
    <string name="pref_press_label_imperial">in Hg</string>
    <string name="pref_press_label_rus">mm Hg</string>
    <string name="pref_press_key" translatable="false">units_p</string>
    <string name="pref_press_metric" translatable="false">metric_p</string>
    <string name="pref_press_imperial" translatable="false">imperial_p</string>
    <string name="pref_press_rus" translatable="false">rus_p</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Air Condition Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_set_distance_key" translatable="false">set_distance</string>
    <string name="pref_set_distance_accuracy_label">Set location accuracy</string>
    <string name="pref_set_distance_accuracy_summary">Station search radius</string>
    <string name="pref_distance" translatable="false">
        <xliff:g id="distance">%1$1.0f</xliff:g>
    </string>
    <string name="distance_unit_km">%d km</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="format_full_friendly_date" translatable="false">"         <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>     "</string>
    <string name="format_temperature" translatable="false">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>
    <string name="wind_label">Wind</string>
    <string name="format_wind_kmh" translatable="false">
        <xliff:g id="speed">%1$1.0f</xliff:g>
    </string>
    <string name="format_wind_mph" translatable="false">
        <xliff:g id="speed">%1$1.0f</xliff:g>
        <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="wind_unit_rus">m/s</string>
    <string name="wind_unit_imp">m/h</string>
    <string name="wind_unit_metric">km/h</string>
    <string name="wind_direction_label">Wind direction</string>
    <string name="n_label">N</string>
    <string name="nne_label">NNE</string>
    <string name="ne_label">NE</string>
    <string name="ene_label">ENE</string>
    <string name="e_label">E</string>
    <string name="ese_label">ESE</string>
    <string name="se_label">SE</string>
    <string name="sse_label">SSE</string>
    <string name="s_label">S</string>
    <string name="ssw_label">SSW</string>
    <string name="sw_label">SW</string>
    <string name="wsw_label">WSW</string>
    <string name="w_label">W</string>
    <string name="wnw_label">WNW</string>
    <string name="nw_label">NW</string>
    <string name="nnw_label">NNW</string>
    <string name="pressure_label">Pressure</string>
    <string name="format_pressure" translatable="false">
        <xliff:g id="pressure">%1.0f</xliff:g>
    </string>
    <string name="format_pressure_metric" translatable="false">
        <xliff:g id="pressure">%1.0f</xliff:g>
    </string>
    <string name="format_pressure_imper" translatable="false">
        <xliff:g id="pressure">%1.0f</xliff:g>
    </string>
    <string name="pressure_unit_rus">mm Hg</string>
    <string name="pressure_unit_imp">in Hg</string>
    <string name="pressure_unit_metric">mb</string>
    <string name="humidity_label">Humidity</string>
    <string name="format_humidity" translatable="false">
        <xliff:g id="humidity">%1.0f</xliff:g> %%
    </string>
    <string name="humidity_dimention" translatable="false">%</string>
    <string name="format_precip" translatable="false">
        <xliff:g id="precip">%1.0f</xliff:g>
    </string>
    <string name="format_precip_metric">mm</string>
    <string name="format_precip_imperial">in</string>
    <string name="format_notification" translatable="false">
        Forecast:<xliff:g id="condition">%1$s</xliff:g> -
        High:<xliff:g id="high">%2$s</xliff:g>
        Low:<xliff:g id="low">%3$s</xliff:g>
    </string>
    <string name="feels_like">feels like</string>
    <string name="night_feels_like">night</string>
    <string name="expandaple_less">less</string>
    <string name="expandaple_more">more</string>
    <string name="precipitation">Precipitation</string>
    <string name="moonrise">Moonrise</string>
    <string name="moonset">Moonset</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="pm25" translatable="false">PM₂₅</string>
    <string name="pm10" translatable="false">PM₁₀</string>
    <string name="co" translatable="false">CO</string>
    <string name="no2" translatable="false">NO₂</string>
    <string name="so2" translatable="false">SO₂</string>
    <string name="w" translatable="false">W</string>
    <string name="wg" translatable="false">Wg</string>
    <string name="p" translatable="false">P</string>
    <string name="h" translatable="false">H</string>
    <string name="o3" translatable="false">O₃</string>
    <string name="aqi_dimention">µg/m³</string>
    <string name="pollution_good">good</string>
    <string name="pollution_moderate">moderate</string>
    <string name="pollution_pre_unhealthy">pre unhealthy</string>
    <string name="pollution_unhealthy">unhealthy</string>
    <string name="pollution_very_unhealthy">very unhealthy</string>
    <string name="pollution_hazardous">hazardous</string>
    <string name="good_full">Air quality is considered satisfactory, and air pollution poses little or no risk.</string>
    <string name="moderate_full">Air quality is acceptable; however, for some pollutants there may be a moderate health concern for a very small number of people who are unusually sensitive to air pollution.</string>
    <string name="pre_unhealthy_full">Members of sensitive groups may experience health effects. The general public is not likely to be affected.</string>
    <string name="unhealthy_full">Everyone may begin to experience health effects; members of sensitive groups may experience more serious health effects</string>
    <string name="very_unhealty_full">Health warnings of emergency conditions. The entire population is more likely to be affected.</string>
    <string name="hazardous_full">Health alert: everyone may experience more serious health effects</string>
    <string name="invalid_data">*Looks like you are too far from any stations. The data may be not accurate.</string>
    <string name="good_recomendation">Enjoy your usual outdoor activities. We recommend opening your windows and ventilating your home to bring in fresh, oxygen-rich air.</string>
    <string name="moderate_recomendation">Sensitive groups should reduce outdoor activity. We recommend closing your windows to avoid dirty outdoor air.</string>
    <string name="pre_unhealthy_recomendation">The general public should greatly reduce outdoor exertion. Sensitive groups should avoid all outdoor activity. Everyone should take care to wear a pollution mask. Ventilation is discouraged.</string>
    <string name="unhealthy_recomendation">Outdoor exertion, particularly for sensitive groups, should be limited. Everyone should take care to wear a pollution mask. Ventilation is not recommended.</string>
    <string name="very_unhealty_recomendation">The general public should greatly reduce outdoor exertion. Sensitive groups should avoid all outdoor activity. Everyone should take care to wear a pollution mask. Ventilation is discouraged. Air purifiers should be turned on.</string>
    <string name="hazardous_recomendation">The general public should avoid outdoor exertion. Everyone should take care to wear a quality pollution mask. Ventilation is discouraged. Homes should be sealed and air purifiers turned on.</string>
    <string name="pm25_header">PM₂₅ - Fine Particulate Matter</string>
    <string name="about_developer">Developer</string>
    <string name="about_ruchkin_igor">Ruchkin Igor (iaruchkin@gmail.com)</string>
    <string name="about_github" translatable="false">Github</string>
    <string name="about_github_com" translatable="false">github.com/iaruchkin/DeepBreath</string>
    <string name="about_air_quality_index">Air quality index data</string>
    <string name="about_aqicn_org">Powered by aqicn.org</string>
    <string name="about_av_air_quality_index">Additional air quality index data</string>
    <string name="about_airvisual">Powered by airvisual.com</string>
    <string name="about_weather_data">Weather data</string>
    <string name="about_apixu_com">Powered by openweathermap.com</string>
    <string name="about_icons">Icons</string>
    <string name="about_designed_by">designed by Smashicons from Flaticon</string>
    <string name="about_logo">Logo</string>
    <string name="about_logo_designed_by">designed by Vectors Market from Flaticon</string>
    <string name="next_button">NEXT</string>
    <string name="skip_button">SKIP</string>
    <string name="permission_button">OK</string>
    <string name="bookmarks">Favorites</string>
    <string name="empty_favorites">Your favorites list is empty</string>
    <string name="type_address">Type address</string>
</resources>