<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:asp="http://schemas.android.com/apk/res-auto"
    xmlns:app="urn:oasis:names:tc:xliff:document:1.2">

    <!--<EditTextPreference-->
        <!--android:defaultValue="auto"-->
        <!--android:inputType="text"-->
        <!--android:key="@string/pref_location_key"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_location_label" />-->

    <ListPreference
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:summary="@string/pref_units_label_metric"/>

    <ListPreference
        android:defaultValue="@string/pref_press_rus"
        android:entries="@array/pref_press_options"
        android:entryValues="@array/pref_press_values"
        android:key="@string/pref_press_key"
        android:title="@string/pref_press_label"
        android:summary="@string/pressure_unit_rus"/>

    <ListPreference
        android:defaultValue="@string/pref_wind_rus"
        android:entries="@array/pref_wind_options"
        android:entryValues="@array/pref_wind_values"
        android:key="@string/pref_wind_key"
        android:title="@string/pref_wind_label"
        android:summary="@string/wind_unit_rus"/>

    <SwitchPreference
        android:layout_width="wrap_content"
        android:defaultValue="false"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notifications_label" />

    <SeekBarPreference
        android:layout_width="wrap_content"
        android:key="@string/pref_set_distance_key"
        android:defaultValue="@integer/seek_bar_default"
        android:max="@integer/seek_bar_max"
        asp:min="@integer/seek_bar_min"
        android:title="@string/pref_set_distance_accuracy_label"
        android:summary="@string/pref_set_distance_accuracy_summary"
        app:showSeekBarValue="false"/>

</androidx.preference.PreferenceScreen>