<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:orderInCategory="100"
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <!--    TODO 1.3-->
    <item
        android:visible="true"
        android:id="@+id/action_find"
        android:icon="@drawable/ic_search"
        android:title="@string/action_find"
        app:showAsAction="always" />

    <item
        android:visible="true"
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_bookmark_added"
        android:title="@string/action_find"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:showAsAction="always" />

</menu>