<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
android:fillViewport="true">

    <include layout="@layout/toolbar" />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".ui.fragments.AboutFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="14dp"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_developer"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_ruchkin_igor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="14dp"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_github"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_github_com"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aqi_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="14dp"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_air_quality_index"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_aqicn_org"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aqiav_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="14dp"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_av_air_quality_index"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_airvisual"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/weather_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="14dp"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_weather_data"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_apixu_com"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/icons_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="14dp"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_icons"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_designed_by"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/logo_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="14dp"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_logo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_logo_designed_by"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>