<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <include layout="@layout/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:boxBackgroundColor="@color/colorPrimaryLight"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp">

        <AutoCompleteTextView
            android:id="@+id/rFindCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="26dp"
            android:hint="@string/type_address"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/bookmarks"
        app:drawableEndCompat="@drawable/ic_location_city_black_24dp"
        app:drawableTint="@color/colorPrimaryDark"
        android:drawablePadding="10dp"/>

    <TextView
        android:id="@+id/rEmptyFavorites"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingBottom="100dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/empty_favorites"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rFavoritesRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="10dp"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="20dp"
        tools:listitem="@layout/item_favorites_forecast"/>

    <include layout="@layout/layout_error"
        android:visibility="gone"/>

</LinearLayout>